--- a/css/style.css
+++ b/css/style.css
@@ -1276,7 +1276,7 @@ color: #aa8453;
     display: -moz-inline-stack;
     display: inline-block;
     zoom: 1;
-    *display: inline;
+    display: inline;
     width: 20px;
     height: 2px;
     font: bold 14px/.4 Helvetica;
@@ -4832,7 +4832,7 @@ button.mfp-arrow {
     margin-top: 0px;
     font-size: 12px;
     text-align: right;
-	0
+	
 	
 	margin-bottom: 5px;
 }
@@ -5599,7 +5599,7 @@ font-size: 15px;
 }
 .footer .list li a:hover {
   padding-left: 15px;
-  color: #aa8453);
+  color: #aa8453;
 }
 .footer .list li a:before {
   position: absolute;
@@ -5904,3 +5904,179 @@ font-size: 15px;
         font-size: 30px;
     }
 }
+#forcast-widget
+ {
+    position: absolute;
+    top: 45%;
+    left: 5%;
+    background: #1e1a2469;
+    color: #fff;
+    padding: 10px;
+  
+ 
+  .popup-weather {
+    width: 310px !important;
+  }
+  .popup {
+    position: absolute;
+    left: 12em;
+    bottom: 0;
+    background: #fff;
+    padding: 7px;
+    color: #000;
+    width: 280px;
+    border-radius: 5px;
+    display: none;
+  }
+  .popup .header1 {
+    background: #1e1a24;
+    color: #fff;
+    padding: 10px 10px;
+  }
+  .popup .header1 h1 {
+    margin: 0;
+    font-size: 1.3rem !important;
+  }
+  .popup .header a {
+    position: absolute;
+    right: -20px;
+    top: -15px;
+    background: #8080806e;
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+  }
+  .popup .header1 h4 img {
+    width: 30px !important;
+    height: 30px !important;
+    margin-right: 10px !important;
+  }
+  .popup .header1 a i {
+    vertical-align: text-top;
+    margin-left: 5px;
+    margin-top: 3px;
+    color: #fff;
+    font-size: 12px;
+  }
+  .popup .body {
+    overflow: hidden;
+  }
+  .popup .body iframe {
+    width: 100%;
+    height: 250px;
+  }
+  .popup .body .benefits-ic {
+    width: 20px !important;
+    height: 20px !important;
+  }
+  .discovery-hm {
+    margin-top: 0.7em;
+    width: 60%;
+  }
+  .popup .body img {
+    width: 30px !important;
+    height: 30px !important;
+  }
+  .popup .body ul li .forcast_date {
+    display: grid;
+    position: absolute;
+    right: 20px;
+  }
+  .popup .body ul li .forcast_date small {
+    color: #ff8f1c;
+  }
+  .popup .body ul li .forcast_date span {
+    font-size: small;
+  }
+  .popup .body ul li {
+    margin: 15px;
+  }
+  .popup .body ul li p {
+    margin: 0 !important;
+  }
+  .other-banners {
+    height: 70vh !important;
+  }
+  .hotel_benefits_table .benefits_table ul {
+    align-items: left;
+    padding: 2em;
+    display: block;
+    color: #fff !important;
+  }
+  .benefits_area {
+    width: 15%;
+    bottom: 10em;
+    left: 5em;
+    z-index: 999;
+    position: absolute;
+    z-index: 9;
+    background: #1e1a24;
+    opacity: 0.4 !important;
+  }
+  .benefits_table ul {
+    list-style: none;
+  }
+  .benefits_table ul li {
+    color: #fff !important;
+  }}
+  #forcast-widget-mb {
+    display: none;
+  }
+  #forcast-widget ul {
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+  }
+  #forcast-widget ul li {
+    display: flex;
+    margin: 10px;
+    cursor: pointer;
+  }
+  #forcast-widget ul li:hover .popup {
+    display: block;
+  }
+  #forcast-widget ul li img {
+    margin-right: 1em;
+    width: 20px;
+    height: 20px;
+  }
+  #forcast-widget ul li p {
+    margin: 5px 0 0;
+    font-size: smaller;
+  }
+  #forcast-widget ul li p:hover{
+    color: #aa8453;
+  }
+  
+  @media screen and (max-width: 767px) {
+    #forcast-widget{
+        display: none;
+    }
+    .myVideo{
+        display: none;
+    }
+    .room-facilities ul li {
+        color: #3b3b3b;
+        font-size: 10px;
+        padding-bottom: 0px;
+      }
+      
+  }
+  @media screen and (min-height : 750px) and (min-width:991px) {
+    .booking-wrapper {
+        position: absolute;
+        left: 0;
+        width: 100%;
+        bottom:20%;
+        z-index: 5;
+    }
+  }
+  @media screen and (min-height : 1000px) and (min-width:991px) {
+    .booking-wrapper {
+        position: absolute;
+        left: 0;
+        width: 100%;
+        bottom: 43%;
+        z-index: 5;
+    }
+  }
